# LLModel

./: Dockerfile  README.md  pyproject.toml  run  run-llm
frontend/: __main__.py
frontend/frontend/display/: plot.py
frontend/frontend/input/: __init__.py
paper/: customTitle.sty  paper.org  paper.tex
src/: __main__.py  chain.py  documentation_agent.py  functions.py  om.py  openai_models.py  semantic_search.py
src/frontend/: __init__.py  utils.py
src/frontend/display/: __init__.py  model.py
src/llm/: __main__.py  chain.py  documentation_agent.py  function_calling.py  functions.py  om.py  om_embeddings.py  openai_models.py  utils.py
tests/: ActiveLowPass.mo  HighPassFilter.mo  LowPassFilter.mo
