[tool.poetry]
name = "llmodel"
version = "0.1.0"
description = ""
authors = ["Ben Van Sleen <benvansleen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
reactpy = {extras = ["starlette"], version = "^1.0.1"}
control = "^0.9.4"
langchain = "^0.0.206"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
